<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/gameOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_manager"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/gameRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_role" />
    </LinearLayout>

    <Button
        android:id="@+id/acceptInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept" />

    <Button
        android:id="@+id/declineInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline" />
</LinearLayout>