<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <fragment
        android:id="@+id/gameMap"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reconnectWebsocket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reconnect"
            android:visibility="gone" />

        <TextView
            android:id="@+id/gameState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connecting" />

        <TextView
            android:id="@+id/gameScores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/no_scores"
            android:textColor="@color/colorText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gameOwnerControls"
        style="?attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/pauseUnpauseGame"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pause" />

        <Button
            android:id="@+id/endGame"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end" />
    </LinearLayout>

</LinearLayout>